--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,9 @@
 
 :root {
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  /* color: rgba(255, 255, 255, 0.87); */
+  /* background-color: #242424; */
+  /* background-color: #222222; */
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -14,22 +15,37 @@
 }
 
 .fourstar-bg {
-  background: rgb(135, 34, 195);
+  /* background: rgb(135, 34, 195); */
+  /* background: -moz-linear-gradient( */
+  /*   0deg, */
+  /*   rgba(135, 34, 195, 1) 0%, */
+  /*   rgba(123, 45, 253, 1) 100% */
+  /* ); */
+  /* background: -webkit-linear-gradient( */
+  /*   0deg, */
+  /*   rgba(135, 34, 195, 1) 0%, */
+  /*   rgba(123, 45, 253, 1) 100% */
+  /* ); */
+  /* background: linear-gradient( */
+  /*   0deg, */
+  /*   rgba(135, 34, 195, 1) 0%, */
+  /*   rgba(123, 45, 253, 1) 100% */
+  background: rgb(135, 9, 174);
   background: -moz-linear-gradient(
     0deg,
-    rgba(135, 34, 195, 1) 0%,
-    rgba(123, 45, 253, 1) 100%
+    rgba(135, 9, 174, 1) 0%,
+    rgba(89, 38, 105, 1) 100%
   );
   background: -webkit-linear-gradient(
     0deg,
-    rgba(135, 34, 195, 1) 0%,
-    rgba(123, 45, 253, 1) 100%
+    rgba(135, 9, 174, 1) 0%,
+    rgba(89, 38, 105, 1) 100%
   );
   background: linear-gradient(
     0deg,
-    rgba(135, 34, 195, 1) 0%,
-    rgba(123, 45, 253, 1) 100%
-  );
+    rgba(135, 9, 174, 1) 0%,
+    rgba(89, 38, 105, 1) 100%
+  ); /* ); */
 }
 
 .fivestar-bg {
