--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,8 @@
 @tailwind utilities;
 
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  /* font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif; */
+  font-family: Rubik, Inter, sans-serif;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
