--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,29 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+.bg-fourstar {
+  background: rgb(135, 9, 174);
+  background: -moz-linear-gradient(0deg,
+      rgba(135, 9, 174, 1) 0%,
+      rgba(89, 38, 105, 1) 100%);
+  background: -webkit-linear-gradient(0deg,
+      rgba(135, 9, 174, 1) 0%,
+      rgba(89, 38, 105, 1) 100%);
+  background: linear-gradient(0deg,
+      rgba(135, 9, 174, 1) 0%,
+      rgba(89, 38, 105, 1) 100%);
+}
+
+.bg-fivestar {
+  background: rgb(223, 191, 0);
+  background: -moz-linear-gradient(0deg,
+      rgba(223, 191, 0, 1) 0%,
+      rgba(213, 145, 0, 1) 100%);
+  background: -webkit-linear-gradient(0deg,
+      rgba(223, 191, 0, 1) 0%,
+      rgba(213, 145, 0, 1) 100%);
+  background: linear-gradient(0deg,
+      rgba(223, 191, 0, 1) 0%,
+      rgba(213, 145, 0, 1) 100%);
+}
